Bug fixes and now stuck on saving FEN Strings

--- a/src/chess/board/board.component.css
+++ b/src/chess/board/board.component.css
@@ -88,5 +88,10 @@
 	 .hide {
 		 display: none;
 	 }
+
+	 .limits {
+		 color: #000;
+		 text-decoration: none;
+	 }
 	
 
